# OpenGL-Preset

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  my_first_window
